# happyrobot-take-home

./: .gitignore  README.md
api/: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 747ddda7afe0_create_loads_carriers_calls_offers.py
api/scripts/: seed_loads.py
api/src/happyrobot_api/: auth.py  config.py  db.py  errors.py  fmcsa.py  main.py  models.py  negotiate.py
api/src/happyrobot_api/routers/: calls.py  carriers.py  dashboard.py  loads.py  negotiate.py  offers.py
api/src/happyrobot_api/schemas/: __init__.py  calls.py  carriers.py  common.py  dashboard.py  loads.py  negotiate.py  offers.py
api/tests/: conftest.py  test_auth.py  test_calls_endpoint.py  test_carriers_endpoint.py  test_dashboard_endpoint.py  test_fmcsa.py  test_fmcsa_live.py  test_health.py  test_loads_endpoint.py  test_models.py  test_negotiate_endpoint.py  test_negotiate_logic.py  test_offers_endpoint.py  test_schemas.py
dashboard/: .dockerignore  .gitignore  Dockerfile  package-lock.json  package.json  tailwind.config.ts
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/calls/[id]/: page.tsx
dashboard/components/: charts.tsx  csv-export-button.tsx  kpi-card.tsx
dashboard/components/ui/: badge.tsx  card.tsx  table.tsx
dashboard/lib/: api.ts  utils.ts
